# behave-sample-cases

./: pyproject.toml  requirements.txt  start_appium_mac.sh
features/: environment.py  example.feature
features/example/: example.feature
features/steps/: __init__.py  common_steps.py
