[project]
name = "behave-sample-cases"
version = "0.1.0"
description = "Sample BDD test cases using Behave"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "janus",
    "behave",
    "psutil",
    "pillow",
    "pywinauto",
    "psutil",
    "playwright",
    "langchain>=0.1.20",
    "langchain-openai>=0.0.8",
    "langchain-anthropic>=0.0.8",
    "langchain-google-genai>=0.0.8",
    "google-generativeai>=0.4.0",
    "anthropic>=0.22.0",
    "openai>=1.0.0",
]


[tool.uv]
dev-dependencies = []
